--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,28 @@
-appdirs==1.4.4
+astroid==2.4.2
+cachetools==4.1.1
+certifi==2020.11.8
+chardet==3.0.4
 click==7.1.2
-distlib==0.3.1
-filelock==3.0.12
+cssselect==1.1.0
+cssutils==1.0.2
 Flask==1.1.2
+Flask-WTF==0.14.3
+idna==2.10
+isort==5.6.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
+lazy-object-proxy==1.4.3
+lxml==4.6.2
 MarkupSafe==1.1.1
+mccabe==0.6.1
+premailer==3.7.0
+pylint==2.6.0
+requests==2.25.0
 six==1.15.0
-virtualenv==20.2.1
+toml==0.10.2
+urllib3==1.26.2
+validate-email==1.3
 Werkzeug==1.0.1
+wrapt==1.12.1
+WTForms==2.3.3
+yagmail==0.14.245
